hphp/hack/test/typecheck/expression_trees/splice_state4.php.like_types.exp
File "splice_state4.php", line 21, characters 7-26:
Typing error (Typing[4110])
  File "splice_state4.php", line 21, characters 7-26:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "splice_state4.php", line 12, characters 25-53:
  But got `dynamic` because it is an unenforceable type
File "splice_state4.php", line 22, characters 7-13:
Typing error (Typing[4110])
  File "splice_state4.php", line 22, characters 7-13:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 41, characters 38-76:
  But got `dynamic` because it is an unenforceable type
File "splice_state4.php", line 26, characters 5-13:
Typing error (Typing[4110])
  File "splice_state4.php", line 26, characters 5-9:
  Expected `num` because this is used in an arithmetic operation
  File "splice_state4.php", line 6, characters 10-13:
  But got `?int`
  File "splice_state4.php", line 20, characters 15-70:
  All the local information about `$x->x` has been invalidated during this call.
This is a limitation of the type-checker; use a local if that's the problem.
